# hexa-modeling-prototype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
core/: CMakeLists.txt
core/include/HMP/: Commander.hpp  Project.hpp  Refinement.hpp  grid.hpp  operationstree.hpp  types.hpp  undoredo.hpp
core/include/HMP/Actions/: Clear.hpp  Delete.hpp  Extrude.hpp  ExtrudeUtils.hpp  Load.hpp  MakeConforming.hpp  MoveVert.hpp  Paste.hpp  Project.hpp  Project.tpp  Refine.hpp  Root.hpp  Rotate.hpp  Transform.hpp  TransformAll.hpp  TransformVerts.hpp  Utils.hpp
core/include/HMP/Algorithms/: Projection.hpp
core/include/HMP/Dag/: Delete.hpp  Element.hpp  Extrude.hpp  Node.hpp  NodeHandle.hpp  NodeHandle.tpp  NodeSet.hpp  NodeSet.tpp  Operation.hpp  Refine.hpp  Utils.hpp
core/include/HMP/Meshing/: Match.hpp  Mesher.hpp  Projection.hpp  Refinement.hpp  Utils.hpp  Utils.tpp  defensiveAdvance.hpp  defensiveAdvance.tpp  fill.hpp  refinementSchemes.hpp  smooth.hpp  smooth.tpp  types.hpp
core/include/HMP/Projection/: Utils.hpp  Utils.tpp  defensiveAdvance.hpp  fill.hpp  jacobianAdvance.hpp  percentileAdvance.hpp  project.hpp  smooth.hpp
core/include/HMP/Refinement/: Scheme.hpp  Schemes.hpp  Utils.hpp  schemes.hpp
core/include/HMP/Utils/: Collections.hpp  Collections.tpp  DerefRanged.hpp  Geometry.hpp  MapRanged.hpp  Serialization.hpp  Serialization.tpp  SetView.hpp  SetView.tpp  enums.hpp  enums.tpp  span.hpp  span.tpp  stream.hpp  stream.tpp  transform.hpp
core/include/HMP/actions/: Delete.hpp  Extrude.hpp  MakeConforming.hpp  MoveVert.hpp  Refine.hpp  Refine3x3.hpp  extrudeaction.hpp  facerefineaction.hpp  makeconformingaction.hpp  moveaction.hpp  refineaction.hpp  removeaction.hpp
core/include/hexa-modeling-prototype/: grid.hpp  hello_world.hpp  operationstree.hpp  refinementschemes.hpp  undoredo.hpp  utils.hpp
core/include/hexa-modeling-prototype/actions/: extrudeaction.hpp  facerefineaction.hpp  makeconformingaction.hpp  moveaction.hpp  refineaction.hpp  removeaction.hpp
core/include/hexa-modeling-prototype/dag/: Delete.hpp  Element.hpp  Extrude.hpp  Node.hpp  Operation.hpp  Refine.hpp
core/include/hexa-modeling-prototype/utils/: span.hpp  span.tpp
core/src/: Commander.cpp  Project.cpp  grid.cpp  hello_world.cpp  operationstree.cpp  undoredo.cpp  utils.cpp
core/src/Actions/: Clear.cpp  Delete.cpp  Extrude.cpp  ExtrudeUtils.cpp  Load.cpp  MakeConforming.cpp  MoveVert.cpp  Pad.cpp  Paste.cpp  Project.cpp  Refine.cpp  Root.cpp  Rotate.cpp  Smooth.cpp  SplitPlane.cpp  Transform.cpp  TransformAll.cpp  TransformVerts.cpp  Utils.cpp
core/src/Algorithms/: Projection.cpp
core/src/Dag/: Element.cpp  Extrude.cpp  Node.cpp  NodeSet.cpp  Operation.cpp  Refine.cpp  Utils.cpp
core/src/Meshing/: Match.cpp  Mesher.cpp  Projection.cpp  Projection_old.cpp  Refinement.cpp  Utils.cpp  defensiveAdvance.cpp  fill.cpp  refinementSchemes.cpp
core/src/Projection/: Match.cpp  Utils.cpp  altProject.cpp  defensiveAdvance.cpp  fill.cpp  jacobianAdvance.cpp  project.cpp  smooth.cpp
core/src/Refinement/: Scheme.cpp  Schemes.cpp  Sub3x3AdapterCandidate.cpp  Utils.cpp  schemes.cpp
core/src/Utils/: Geometry.cpp  Serialization.cpp  transform.cpp
core/src/actions/: Delete.cpp  Extrude.cpp  MakeConforming.cpp  MoveVert.cpp  Refine.cpp  Refine3x3.cpp  extrudeaction.cpp  facerefineaction.cpp  makeconformingaction.cpp  moveaction.cpp  refineaction.cpp  removeaction.cpp
core/src/dag/: Delete.cpp  Element.cpp  Extrude.cpp  Node.cpp  Operation.cpp  Refine.cpp
gui/: CMakeLists.txt  main.cpp
gui/include/HMP/Gui/: App.hpp  HrDescriptions.hpp  SidebarWidget.hpp  Widget.hpp  Widgets.hpp
gui/include/HMP/Gui/Dag/: Layout.hpp  Viewer.hpp  createLayout.hpp
gui/include/HMP/Gui/DagViewer/: Layout.hpp  Widget.hpp
gui/include/HMP/Gui/Utils/: Controls.hpp  Controls.tpp  Drawing.hpp  HrDescriptions.hpp  Theme.hpp  Transform.hpp
gui/include/HMP/Gui/Widgets/: Actions.hpp  Ae3d2ShapeExporter.hpp  Axes.hpp  Commander.hpp  Debug.hpp  DirectVertEdit.hpp  Highlight.hpp  Pad.hpp  Projection.hpp  Projection.tpp  Save.hpp  Smooth.hpp  Target.hpp  VertEdit.hpp
gui/include/hexa-modeling-prototype/gui/: App.hpp
gui/include/hexa-modeling-prototype/gui/dag/: Layout.hpp  Viewer.hpp  createLayout.hpp  treeLayout.hpp
gui/src/: App.cpp  HrDescriptions.cpp  SidebarWidget.cpp  Widget.cpp  Widgets.cpp  main.cpp
gui/src/Dag/: Layout.cpp  Viewer.cpp  createLayout.cpp
gui/src/DagViewer/: Layout.cpp  Widget.cpp  createLayout.cpp
gui/src/Utils/: Controls.cpp  Drawing.cpp  FilePicking.cpp  HrDescriptions.cpp  Theme.cpp  Themer.cpp  Transform.cpp
gui/src/Widgets/: Actions.cpp  Ae3d2ShapeExporter.cpp  Axes.cpp  Commander.cpp  Debug.cpp  DirectVertEdit.cpp  Highlight.cpp  Pad.cpp  Projection.cpp  Save.cpp  Smooth.cpp  Target.cpp  VertEdit.cpp
gui/src/dag/: Layout.cpp  Viewer.cpp  createLayout.cpp  treeLayout.cpp
